--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,11 @@ dependencies = [
     "mcp[cli]>=1.3.0",
     "pynetdicom>=2.1.1",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.4.0",
+    "requests>=2.31.0",
+    "pydicom>=2.4.0",
+    "pytest-cov>=6.0.0"
+]
