--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "httpx>=0.28.1",
     "mcp[cli]>=1.3.0",
     "pynetdicom>=2.1.1",
+    "pyyaml>=6.0.2",
 ]
 
 [project.optional-dependencies]
