See Description.  Added odelcontextprotocol/inspector and some fixes, additions
 - Fix PersonName serialization bug
- Update README for pip/venv workflow
- Add dual Orthanc server setup
- Add TESTING_GUIDE.md

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -4,7 +4,13 @@ nodes:
     host: "localhost"
     port: 4242
     ae_title: "ORTHANC"
-    description: "Local Orthanc DICOM server"
+    description: "Local Orthanc DICOM server (Primary)"
+  
+  secondary:
+    host: "localhost"
+    port: 4243
+    ae_title: "ORTHANC2"
+    description: "Local Orthanc DICOM server (Secondary)"
 
 current_node: "main"
 calling_aet: "MCPSCU" 
