Remove Old MCP, just use MCPJAM
1.  Set up to use OpenAI with API_KEY in MCPJAM, add prompt
2.  Start setting up FHIR Tools

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ todo
 
 # Environment variables
 .env
+
+# Local MCP config (keep example, ignore local)
+mcp-config.json
+
+# SSL/TLS certificates (development only - self-signed for localhost)
+# These are safe to commit for development, but ignored by default
+# *.pem
+# *.key
+# *.crt
