--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 
 # OpenAI Configuration
 OPENAI_API_KEY=your-openai-api-key-here
+SIIM_API_KEY=""
 
 # Optional: Override default OpenAI settings
 # OPENAI_MODEL=gpt-4o
