--- a/tests/docker-compose-fhir.yaml
+++ b/tests/docker-compose-fhir.yaml
@@ -18,13 +18,10 @@ services:
       - "8080:8080"
     environment:
       # HAPI server configuration
-      # Using Derby embedded database (file-based, stored in /data/hapi-fhir)
-      - SPRING_DATASOURCE_URL=jdbc:derby:directory:/data/hapi-fhir;create=true
+      # Using default in-memory H2 database (no persistence, resets on restart)
+      # This is fine for testing. For production, configure file-based H2 or PostgreSQL
       # Enable CORS for web access
       - SPRING_BOOT_ADMIN_CLIENT_URL=http://localhost:8080
-    volumes:
-      # Persist Derby database files to host
-      - hapi-fhir-data:/data/hapi-fhir
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/fhir/metadata"]
       interval: 30s
@@ -33,10 +30,6 @@ services:
       start_period: 60s
     networks:
       - dicom-network
-
-volumes:
-  # Named volume for HAPI FHIR Derby database persistence
-  hapi-fhir-data:
 
 networks:
   dicom-network:
