--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pypdf2>=3.0.1",
     "pyyaml>=6.0.2",
     "python-dotenv>=1.0.0",
+    "mysql-connector-python>=9.0.0",
 ]
 
 [project.optional-dependencies]
