Debug TLS issues with pytest, .env

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,11 @@
 
 # OpenAI Configuration
 OPENAI_API_KEY=your-openai-api-key-here
-SIIM_API_KEY=""
+SIIM_API_KEY="SIIM Key Here"
+MINI_RIS_DB_PASSWORD="orthanc_ris_app"
+ORTHANC_WEB_SCHEME="https"
+ORTHANC_WEB_VERIFY="false"
+ORTHANC_DICOM_TLS_MODE="auto"
 
 # Optional: Override default OpenAI settings
 # OPENAI_MODEL=gpt-4o
