--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "dicom-mcp"
+name = "fhir-dicom-mcp"
 version = "0.1.1"
 description = "Add your description here"
 readme = "README.md"
@@ -12,15 +12,21 @@ dependencies = [
     "pyyaml>=6.0.2",
     "python-dotenv>=1.0.0",
     "mysql-connector-python>=9.0.0",
+    "pillow>=10.0.0",
+    "numpy>=1.24.0",
+    "requests>=2.31.0",
+    "pydicom>=2.4.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.4.0",
-    "requests>=2.31.0",
-    "pydicom>=2.4.0",
     "pytest-cov>=6.0.0",
     "reportlab"
 ]
 [project.scripts]
 dicom-mcp = "dicom_mcp.__main__:main"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["."]
