--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "numpy>=1.24.0",
     "requests>=2.31.0",
     "pydicom>=2.4.0",
+    "openai>=1.0.0",
 ]
 
 [project.optional-dependencies]
